Fix card shadow visibility issue

--- a/styles.css
+++ b/styles.css
@@ -227,6 +227,10 @@ nav {
 	width: 100%;
 	height: 572px;
 	position: relative;
+}
+
+.image-container {
+	height: 100%;
 	background-color: #efefef;
 	overflow: hidden;
 }
